fix: remove comments module due to unusability

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-comments",
   "version": "1.0.0",
-  "description": "Этот проект представляет собой веб-приложение, реализующее доску комментариев с использованием API. Пользователи могут оставлять комментарии, просматривать их и удалять свои сообщения. Проект использует современные технологии для работы с данными и предоставляет удобный интерфейс.",
+  "description": "",
   "main": "index.js",
   
   "scripts": {
